Add action workflow to publish to pypi

--- a/.github/workflows/cd-pypi.yml
+++ b/.github/workflows/cd-pypi.yml
@@ -8,5 +8,6 @@ on:
 jobs:
   deploy:
     uses: ecmwf-actions/reusable-workflows/.github/workflows/cd-pypi.yml@skip-checks
+    with:
+        testpypi: true
     secrets: inherit
-    testpypi: true
